Dodan contact, nije zavrsen do kraja.

--- a/index.html
+++ b/index.html
@@ -125,21 +125,27 @@
         </div>
       </section>
 
-      <section class="contact wrapper">
-        <h2 class="medium-title left">Contact</h2>
-        <p>Ipsum dolor sit amet, consectetur adipiscing elit. Donec hendrerit metus quis suscipit eleifend. Fusce eu tortor sed lorem vestibulum.</p>
+      <section class="contact">
+        <div class="left_side_contact">
+            <h2 class="medium-title left">Contact</h2>
+            <p>Ipsum dolor sit amet, consectetur adipiscing elit. Donec hendrerit metus quis suscipit eleifend. Fusce eu tortor sed lorem vestibulum.</p>
 
-        <div class="row">
-            <div class="columns">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="checkbox" name="" id="">
-                I agree to terms and conditions
+            <div class="row">
+                <div class="columns">
+                    <div class="input_element"><span class="icon-input"><i class="fas fa-user"></i></span><input type="text" placeholder="First Name"></div>
+                    <div class="input_element"><span class="icon-input"><i class="fas fa-user"></i></span><input type="text" placeholder="First Name"></div>
+                    <div class="input_element"><span class="icon-input"><i class="fas fa-envelope"></i></span><input type="text" placeholder="First Name"></div>
+                    <div class="input_element"><span class="icon-input"><i class="fas fa-edit"></i></span><input type="text" placeholder="First Name"></div>
+                    
+                    <div><input type="checkbox" name="" id="">
+                    I agree to terms and conditions</div>
 
-                <button class="primary btn">Submit</button>
+                    <a href="" class="primary-bg text-white btn center">Submit</a>
+                </div>
             </div>
+        </div>
+        <div class="right_side_contact">
+            <img src="assets/Clip-3.png" alt="Contact">
         </div>
       </section>
 
